--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -27,6 +27,10 @@ p {
   @apply shadow-md;
 }
 
+.modal-box {
+  @apply min-h-[20rem] max-w-[25rem];
+}
+
 .btn.btn-ghost {
   @apply shadow-none;
 }
