--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -135,7 +135,7 @@ body {
   background-color: #2835ff;
   border-radius: 4px;
   padding: 0 4px;
-  cursor: pointer;
+  cursor: not-allowed;
 }
 
 .coming-tooltip {
