--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -204,6 +204,9 @@ body {
     font-size: 14px;
     text-align: center;
   }
+  .coming-tooltip {
+    right: -290px;
+  }
 }
 
 @media (max-width: 768px) {
